--- a/package.json
+++ b/package.json
@@ -54,10 +54,5 @@
     "jshint-stylish": "^1.0.1",
     "mocha": "2.x.x"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/MIT"
-    }
-  ]
+  "license": "MIT"
 }
